--- a/Style.css
+++ b/Style.css
@@ -9,20 +9,20 @@ button {
 }
 
 #Umfangstyle {
-	background-color: #4682B4
+	background-color: #4682B4;
 }
 
 #Gradstyle {
-	background-color: #FFA07A
+	background-color: #FFA07A;
 }
 
 #S {
-	background-color:  #00FA9A
-
+	background-color:  #00FA9A;
+  font-size: 20px;
 }
 
 input {
-	background-color: #ffffff
+	background-color: #ffffff;
 }
 
 #Umfangstyle, #Gradstyle, #S {
