--- a/Style.css
+++ b/Style.css
@@ -40,3 +40,15 @@ button {
 	 padding-bottom: 5px;
 	 padding-right: 10px;
 }
+
+#mGewindeA1, #mGewindeA3
+{
+  background-color: #A4C3FF;
+  border-radius: 5px;
+}
+
+#mGewindeA2
+{
+  background-color: #B4FFDB;
+  border-radius: 5px;
+}
