--- a/Style.css
+++ b/Style.css
@@ -18,6 +18,15 @@ body {
 	padding-bottom: 20px;
 	padding-right: 40px;
 }
+
+#headerButton {
+	border-radius: 10px;
+	background: linear-gradient(45deg, #0000FF, #008000);
+	color: black;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
 button {
 	color:green;
 	border-radius: 20px;
