--- a/Games/Hangman/Hangman.css
+++ b/Games/Hangman/Hangman.css
@@ -23,6 +23,15 @@ body {
 	padding-left: 20px;
 }
 
+#headerButton {
+	border-radius: 10px;
+	background: linear-gradient(45deg, #0000FF, #008000);
+	color: black;
+	font-weight: bold;
+	margin-bottom: 20px;
+	width: 90px;
+}
+
 button {
 	color: green;
 	border-radius: 20px;
