--- a/Games/Escape/Escape.css
+++ b/Games/Escape/Escape.css
@@ -42,8 +42,8 @@ button {
 	height: 40px;
 }
 
-#canvas{
-	background-color: darkseagreen;
+#canvas {
+	background-color: #3C3B3B;
 	margin-top: 20px;
 	margin-bottom: 30px;
 }
